--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd .. && npm install && npm run build"
+    // "heroku-postbuild": "cd .. && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
