--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "backend",
+  "name": "mjbcrib-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Server of my portfolio page",
+  "engines": {
+    "node": "12.12.0"
+  },
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
