--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Server of my portfolio page",
   "engines": {
     "node": "12.12.0",
-    "npm": "6.13.2",
+    "npm": "6.13.2"
   },
   "main": "server.js",
   "scripts": {
